fix: 6239 drawer collapse ladder and dropdown ellipsis

--- a/frontend/src/app/modules/policy-engine/policy-configuration/policy-settings-drawer/policy-settings-drawer.component.scss
+++ b/frontend/src/app/modules/policy-engine/policy-configuration/policy-settings-drawer/policy-settings-drawer.component.scss
@@ -596,7 +596,7 @@
     }
 
     .properties .role-row .propRowCell.cellName {
-        padding-left: 26px !important;
+        padding-left: 0 !important;
         padding-top: 0;
         vertical-align: middle;
     }
@@ -699,7 +699,7 @@
     }
 
     .properties .group-row .propRowCell.cellName {
-        padding-left: 26px !important;
+        padding-left: 0 !important;
         padding-top: 0;
         vertical-align: middle;
     }
@@ -803,7 +803,7 @@
     }
 
     .properties .topic-row .propRowCell.cellName {
-        padding-left: 26px !important;
+        padding-left: 0 !important;
         padding-top: 0;
         vertical-align: middle;
         white-space: nowrap;
@@ -904,7 +904,7 @@
     }
 
     .properties .token-row .propRowCell.cellName {
-        padding-left: 26px !important;
+        padding-left: 0 !important;
         padding-top: 0;
         vertical-align: middle;
         white-space: nowrap;
@@ -1001,7 +1001,7 @@
     }
 
     .properties .module-row .propRowCell.cellName {
-        padding-left: 26px !important;
+        padding-left: 0 !important;
         padding-top: 0;
         vertical-align: middle;
         white-space: nowrap;
